--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "eslint": "^8.42.0",
+    "@eslint/js": "^9.3.0",
+    "eslint": "^9.3.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.27.5",
+    "globals": "^15.3.0",
     "jest": "^29.5.0"
   },
   "dependencies": {
