--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,30 +1,27 @@
-name: CI
-
-on:
+name: ESLint
+on: 
   push:
     branches:
       - main
   pull_request:
     branches:
       - main
-
 jobs:
-  lint:
-    runs-on: ubuntu-latest
+  eslint:
+    name: Run eslint scanning
+    runs-on: ubuntu-latest  
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Set up Node.js
+    - uses: actions/checkout@v3
+    - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
           node-version: '22'
-
-      - name: Install dependencies
-        run: npm install
-
-      - name: Run ESLint
-        run: npx eslint .
+    - name: Install ESLint
+      run: |
+        npm install eslint@^8.42.0
+        npm install eslint-config-airbnb-base@^15.0.0
+    - name: Run ESLint
+      run: npx eslint .
 
   test:
     runs-on: ubuntu-latest
