--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
         with:
           node-version: '22'
     - name: Install ESLint
-      run: |
+      run: 
         npm install eslint@^8.42.0
         npm install eslint-config-airbnb-base@^15.0.0
     - name: Run ESLint
