--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Task manager with timer and virtual pet",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npm test"
   },
   "author": "",
   "license": "ISC",
