--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Task manager with timer and virtual pet",
   "main": "index.js",
   "scripts": {
-    "test": "npx eslint ."
+    "test": "jest --colors"
   },
   "author": "",
   "license": "ISC",
